--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
 
   deploy-onpremise:
     name: Deploy on MicroK8s On-Premise
-    runs-on: dev
+    runs-on: main
     needs: build-and-publish
 
     steps:
