--- a/k8s/mcp.yaml
+++ b/k8s/mcp.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: mcp
     spec:
+      imagePullSecrets:
+         - name: ghcr-secret
       containers:
       - name: mcp
         image: ghcr.io/procefy/mcp:latest
