--- a/k8s/mcp.yaml
+++ b/k8s/mcp.yaml
@@ -45,16 +45,17 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    nginx.ingress.kubernetes.io/proxy-buffering: "off"
-    nginx.ingress.kubernetes.io/websocket-services: "mcp-service"
+    nginx.ingress.kubernetes.io/websocket-services: "fastmcp-service"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   rules:
-    - http:
-        paths:
-          - path: /mcp
-            pathType: Prefix
-            backend:
-              service:
-                name: mcp-service
-                port:
-                  number: 80
+  - host: mcp.dynaco.co
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: mcp-service
+            port:
+              number: 80
